--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Miguel angel Luque Fernandez at 2016-10-20 10:50:04 +0100 
+%% Created for Miguel angel Luque Fernandez at 2016-10-24 17:00:51 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{hampel1974,
+	Author = {Hampel, Frank R},
+	Date-Added = {2016-10-24 14:12:13 +0000},
+	Date-Modified = {2016-10-24 14:12:28 +0000},
+	Journal = {Journal of the American Statistical Association},
+	Number = {346},
+	Pages = {383--393},
+	Publisher = {Taylor \&amp; Francis},
+	Title = {The influence curve and its role in robust estimation},
+	Volume = {69},
+	Year = {1974}}
 
 @article{neu2005,
 	Author = {Neugebauer, Romain and van der Laan, Mark},
