--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Miguel angel Luque Fernandez at 2016-10-24 17:00:51 +0100 
+%% Created for Miguel angel Luque Fernandez at 2016-10-31 17:23:06 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{van2007,
+	Author = {Van der Laan, Mark J and Polley, Eric C and Hubbard, Alan E},
+	Date-Added = {2016-10-31 17:22:47 +0000},
+	Date-Modified = {2016-10-31 17:22:56 +0000},
+	Journal = {Statistical applications in genetics and molecular biology},
+	Number = {1},
+	Title = {Super learner},
+	Volume = {6},
+	Year = {2007}}
+
+@article{rubin1974,
+	Author = {Rubin, Donald B},
+	Date-Added = {2016-10-31 15:24:42 +0000},
+	Date-Modified = {2016-10-31 15:24:49 +0000},
+	Journal = {Journal of educational Psychology},
+	Number = {5},
+	Pages = {688},
+	Publisher = {American Psychological Association},
+	Title = {Estimating causal effects of treatments in randomized and nonrandomized studies.},
+	Volume = {66},
+	Year = {1974}}
 
 @article{hampel1974,
 	Author = {Hampel, Frank R},
