--- a/references/bibliography.bib
+++ b/references/bibliography.bib
@@ -1,12 +1,45 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Miguel angel Luque Fernandez at 2016-10-31 17:23:06 +0000 
+%% Created for Miguel angel Luque Fernandez at 2016-11-01 15:21:14 +0000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{efron1983,
+	Author = {Efron, Bradley and Gong, Gail},
+	Date-Added = {2016-11-01 15:20:51 +0000},
+	Date-Modified = {2016-11-01 15:21:02 +0000},
+	Journal = {The American Statistician},
+	Number = {1},
+	Pages = {36--48},
+	Publisher = {Taylor \&amp; Francis},
+	Title = {A leisurely look at the bootstrap, the jackknife, and cross-validation},
+	Volume = {37},
+	Year = {1983}}
+
+@book{efron1982,
+	Author = {Efron, Bradley and Efron, B},
+	Date-Added = {2016-11-01 12:23:55 +0000},
+	Date-Modified = {2016-11-01 12:24:06 +0000},
+	Publisher = {SIAM},
+	Title = {The jackknife, the bootstrap and other resampling plans},
+	Volume = {38},
+	Year = {1982}}
+
+@article{breiman1996,
+	Author = {Breiman, Leo},
+	Date-Added = {2016-11-01 11:07:48 +0000},
+	Date-Modified = {2016-11-01 11:07:59 +0000},
+	Journal = {Machine learning},
+	Number = {1},
+	Pages = {49--64},
+	Publisher = {Springer},
+	Title = {Stacked regressions},
+	Volume = {24},
+	Year = {1996}}
 
 @article{van2007,
 	Author = {Van der Laan, Mark J and Polley, Eric C and Hubbard, Alan E},
