--- a/TMLE.Rmd
+++ b/TMLE.Rmd
@@ -87,27 +87,30 @@ However, Mark van der Laan and collaborators have developed a double-robust esti
 
 2. **TMLE** implemtation uses the G-computation estimand (G-formula). Briefly, the **TMLE** algorithm uses information in the estimated exposure mechanism P(A|W) to update the initial estimator of the conditional expectaction of the outcome given the treatment and the set of covariates W, E$_{0}$(Y|A,W). 
 
-3. The targeted estimates are then substituted into the parameter mapping $\Psi$. The updating step achieves a targeted bias reduction for the parameter of interest $\psi(P_{0})$ (the true target parameter) and serves to solve the efficient score equation. As a result, **TMLE** is a double robust estimator. 
+3. The targeted estimates are then substituted into the parameter mapping $\Psi$. The updating step achieves a targeted bias reduction for the parameter of interest $\psi(P_{0})$ (the true target parameter) and serves to solve the efficient score equation, namelly Influence Curve (IC). As a result, **TMLE** is a double robust estimator. 
 
-4. **TMLE** it will be consistent for $\psi(P_{0})$ if either the conditional expectation E$_{0}$(Y|A,W) or the exposure mechanism P$_{0}$(A|W) are estimated consistently. When both functions are consistently estimated, the **TMLE** will be efficient in that it achieves the lowest asymptotic variance among a large class of estimators. These asymptotic properties typically translate into lower bias and variance in finite samples [@buh2016]. 
+4. **TMLE** it will be consistent for $\psi(P_{0})$ if either the conditional expectation E$_{0}$(Y|A,W) or the exposure mechanism P$_{0}$(A|W) are estimated consistently.   
 
-The general formula to estimate the ATE using the TMLE method:  
+5. **TMLE** will be efficient if the previous two functions are consistently estimated achieveing the lowest asymptotic variance among a large class of estimators. These asymptotic properties typically translate into lower bias and variance in finite samples [@buh2016]. 
+
+6. The general formula to estimate the ATE using the TMLE method:  
 
 $$\psi TMLE,n = \Psi(Q_{n}^{*})= {\frac{1}{n}\sum_{i=1}^{n}\bar{Q}_{n}^{1}\left(1,\ W_{i}\right)-\bar{Q}_{n}^{1}\left(0,\ W_{i}\right)}.  (1)$$
-The efficient influcence curve (IC) based on Hampel seminal paper [@hampel1974] is applied for statistical inference using TMLE:
+7. The efficient influcence curve (IC) based on Hampel seminal paper [@hampel1974] is applied for statistical inference using TMLE:
 
 $$IC_{n}(O_{i})\ \ =\ \left(\frac{I\left(A_{i}=1\right)}{g_n\left(1\left|W_{i}\right)\right)}\ -\ \frac{I\left(A_{i}=0\right)}{g_n\left(0\left|W_{i}\right)\right)}\ \right)\left[Y_{i}-\bar{Q}_{n}^{1}\left(A_{i},W_{i}\right)\right]+\bar{Q}_{n}^{1}\left(1,\ W_{i}\right)-\bar{Q}_{n}^{1}\left(0,\ W_{i}\right) - \psi TMLE,n. (2)$$
 where the variance of the ATE:  
 
 $$\sigma({\psi_{0}})=\sqrt{\frac{Var(IC_{n})}{n}}.  (3)$$
 
-5. The procedure is available with standard software such as the **tmle** package in R  [@gruber2011]. 
+8. The procedure is available with standard software such as the **tmle** package in R  [@gruber2011]. 
 
 #Structural causal framework
 
 ##Direct Acyclic Graph (DAG)
 ![](Figures/DAG.png)
-Figure 1. Direct Acyclic Graph
+**Figure 1**. Direct Acyclic Graph  
+**Source**: Miguel Angel Luque-Fernandez  
 
 ##DAG interpretation 
 
@@ -127,15 +130,16 @@ P(A=1|W=w) > 0 and P(A=0| W = w) > 0 for each possible w.
 The observed outcome value, under the observed treatment, is equal to the counterfactual outcome corresponding to the observed treatment for identical independent distributed (i.i.d.) variables.    
 
 #TMLE flow chart 
-**Source**: Mark van der Laan and Sherri Rose. Targeted learning: causal inference for observational and experimental dataSpringer Series in Statistics, 2011.  
 ![](Figures/tmle.png)
-Figure 2. TMLE flow chart (Road map)
+**Figure 2**. TMLE flow chart (Road map)  
+**Source**: Mark van der Laan and Sherri Rose. Targeted learning: causal inference for observational and experimental dataSpringer Series in Statistics, 2011.  
+
 
 #Data generation
 
 ##Simulation 
 
-In R we create a function to generate the data. The function will have as input number of draws and as output the generated observed data (ObsData) including the counterfactuals (Y1, Y0).  
+In R we create a function to generate the data. The function will have as input **number of draws** and as output the generated **observed data** (ObsData) including the counterfactuals (Y1, Y0).  
 
 The simulated data replicationg the DAG in Figure 1:  
 
@@ -187,7 +191,7 @@ datatable(head(ObsData, n = nrow(ObsData)), options = list(pageLength = 5, digit
 #TMLE simple implementation
 
 ##Step 1: $Q_{0}$(A,**W**)
-Estimation of the initial probability of the outcome (Y) given the treatment (A) and the set of covariates (W), denoted as the $Q_{0}$(A,**W**). To estimate $Q_{0}$(A,**W**) we can use a standard logistic regression model: 
+Estimation of the initial probability of the outcome (Y) given the treatment (A) and the set of covariates (W), denoted as $Q_{0}$(A,**W**). To estimate $Q_{0}$(A,**W**) we can use a standard logistic regression model: 
 
 $$\text{logit}[P(Y=1|A,W)]\,=\,\beta_{0}\,+\,\beta_{1}A\,+\,\hat{\beta_{2}^{T}}W.$$ 
 
@@ -195,7 +199,7 @@ Therefore, we can estimate the initial probability as follows:
 
 $$\bar{Q}^{0}(A,W)\,=\,\text{expit}(\hat{\beta_{0}}\,+\,\hat{\beta_{1}}A\,+\,\hat{\beta_{2}^{T}}W).$$ 
 
-The predicted probability can be estimated using the Super Learner library implemented in the R package “Super-Learner” [@van2007] to include any terms that are functions of A or W (e.g., polynomial terms of A and W, as well as the interaction terms of A and W, can be considered).   
+The predicted probability can be estimated using the Super-Learner library implemented in the R package “Super-Learner” [@van2007] to include any terms that are functions of A or W (e.g., polynomial terms of A and W, as well as the interaction terms of A and W, can be considered).   
 
 Consequently, for each subject, the predicted probabilities for both potential outcomes $\bar{Q}^{0}(0,W)$ and  $\bar{Q}^{0}(1,W)$ can be estimated by setting A = 0 and A = 1 for everyone respectively:
 $$\bar{Q}^{0}(0,W)\,=\,\text{expit}(\hat{\beta_{0}}\,+\,\hat{\beta_{2}^{T}}W),$$
@@ -219,7 +223,7 @@ Q0 <- as.data.frame(Q);mean(Q0$Q1W-Q0$Q0W)
 ```
 
 ##Step 2: $g_{0}(A,W)$
-Estimation of the probability of the treatment (A) given the set of covariates (W), denoted as $g_{0}(A,W)$. We can use again a logistic regression model and to improve the prediction algorithm we can use the Super Learner library or any other machine learning estrategy:  
+Estimation of the probability of the treatment (A) given the set of covariates (W), denoted as $g_{0}(A,W)$. We can use again a logistic regression model and to improve the prediction algorithm we can use the Super-Learner library or any other machine learning estrategy:  
 
 $$\text{logit}[P(A=1|W)]\,=\,\beta_{0}\,+\,\beta_{1}^{T}W.$$ 
 Then, we estimate the predicted probability of P(A|W) = $\hat{g}(1,W)$ using:  
@@ -232,11 +236,12 @@ g1w = predict(g, type ="response");summary(g1w)
 ```
 
 ##Step 3: HAW and $\epsilon$
-This step aims to find a better prediction model targeted at minimising mean squared error (MSE) for the potential outcomes by using the so-called efficient IC estimation equation. For the ATE on step convergence is guaranteed given $\bar{Q}^{0}$ and $\hat{g}(1,W)$ the fluctuating parameter is modelled using a parametric working model to estimate the fluctuation parameters $\epsilon_{0}$ and $\epsilon_{1}$ as follows:
+This step aims to find a better prediction model targeted at minimising the mean squared error (MSE) for the potential outcomes by using the so-called efficient IC estimation equation.  
+For the ATE on step convergence is guaranteed given $\bar{Q}^{0}$ and $\hat{g}(1,W)$.    
+The fluctuating parameter is modelled using a parametric working model to estimate the fluctuation parameters $\epsilon_{0}$ and $\epsilon_{1}$ as follows:    
 
 $$\bar{Q^{1}}(A,W)\,=\,\text{expit}\left[\text{logit}\left(\bar{Q^{0}}(A, W)\right)\,+\,\hat{\epsilon_{0}}H_{0}(A,W)\,+\,\hat{\epsilon_{1}}H_{1}(A,W)\right]  (5)$$
 $$\bar{Q^{1}}(0,W)\,=\,\text{expit}\left[\text{logit}\left(\bar{Q^{0}}(A,W)\right)\,+\,\hat{\epsilon_{0}}H_{0}(A,W)\right]$$
-
 
 $$\bar{Q^{1}}(1,W)\,=\,\text{expit}\left[\text{logit}\left(\bar{Q^{0}}(A,W)\right)\,+\,\hat{\epsilon_{1}}H_{1}(A,W)\right]$$
 Where,
@@ -264,7 +269,7 @@ cat("\n Relative_TMLE.SI_bias:",abs(True_Psi-Psi)/True_Psi*100,"%")
 ```
 
 ##Step 5: Inference
-TMLE uses the efficient influence curve (IC) for inference. The IC is used to obtain standard errors for $\psi$. 
+TMLE uses the efficient influence curve (IC) for inference (i.e., to obtain standard errors for $\psi$).   
 
 $$IC_{n}(O_{i})\ \ =\ \left(\frac{I\left(A_{i}=1\right)}{g_n\left(1\left|W_{i}\right)\right)}\ -\ \frac{I\left(A_{i}=0\right)}{g_n\left(0\left|W_{i}\right)\right)}\ \right)\left[Y_{i}-\bar{Q}_{n}^{1}\left(A_{i},W_{i}\right)\right]+\bar{Q}_{n}^{1}\left(1,\ W_{i}\right)-\bar{Q}_{n}^{1}\left(0,\ W_{i}\right) - \psi TMLE,n. (2)$$
 
@@ -288,9 +293,11 @@ cat("\n Relative_TMLE.SI_bias:",abs(True_Psi-Psi)/True_Psi*100,"%")
 ```
 
 #TMLE vs. AIPTW
-1. The advantages of **TMLE** have been repeatedly demonstrated in both simulation studies and applied analyses [@van2011]. Evidence shows that **TMLE** provides the less unbiased ATE estimate compared with other double-robust estimators [@neu2005], [@van2011] such as the combination of regression adjustment with inverse probability of treatment weighting (IPTW-RA) and the augmented inverse probability of treatment weighting (AIPTW). The AIPTW estimation is a two step procedure with two equations (propensity score equation and mean outcome equation).  
+1. The advantages of **TMLE** have been repeatedly demonstrated in both simulation studies and applied analyses [@van2011]. 
 
-2. To estimate the ATE using the AIPTW estimator one can set the estimation equation (EE) (4) equal to cero and use bootstrap to derive 95% confidence intervals (CI). However, solving the EE using the generalized method of moments (GMM), stacking both equations (propensity score and outcome), reduces the estimation and inference steps to only one. However, given that the propensity score in equation (4) can easily fall outside the range [0, 1] (if for some observations $g_{n}(1|W_{i})$ is close to 1 or 0) the AIPTW estimation can be unstable (near violation of the positivity assumption). This represents the price of not being a substitution estimator as **TMLE**.        
+2.Evidence shows that **TMLE** provides the less unbiased ATE estimate compared with other double-robust estimators [@neu2005], [@van2011] such as the combination of regression adjustment with inverse probability of treatment weighting (IPTW-RA) and the augmented inverse probability of treatment weighting (AIPTW). The **AIPTW** estimation is a two step procedure with two equations (propensity score equation and, mean outcome equation).  
+
+3. To estimate the ATE using the **AIPTW** estimator one can set the estimation equation (EE) (4) equal to cero and use bootstrap to derive 95% confidence intervals (CI). However, solving the EE using the generalized method of moments (GMM), stacking both equations (propensity score and outcome), reduces the estimation and inference steps to only one. However, given that the propensity score in equation (4) can easily fall outside the range [0, 1] (if for some observations $g_{n}(1|W_{i})$ is close to 1 or 0) the **AIPTW** estimation can be unstable (near violation of the positivity assumption). This represents the price of not being a substitution estimator as **TMLE**.        
 
 $$\psi_{0}^{AIPTW-ATE}\ \ =\ \frac{1}{n}\sum_{i=1}^{n}\left(\frac{I\left(A_{i}=1\right)}{g_n\left(1\left|W_{i}\right)\right)}\ -\ \frac{I\left(A_{i}=0\right)}{g_n\left(0\left|W_{i}\right)\right)}\ \right)\left[Y_{i}-\bar{Q}_{n}^{0}\left(A_{i},W_{i}\right)\right]+\frac{1}{n}\sum_{i=1}^{n}\bar{Q}_{n}^{0}\left(1,\ W_{i}\right)-\bar{Q}_{n}^{0}\left(0,\ W_{i}\right). (4)$$
 
@@ -300,19 +307,24 @@ cat("\n AIPTW_bias:", abs(True_Psi-AIPTW))
 cat("\n Relative_AIPTW_bias:",abs(True_Psi-AIPTW)/True_Psi*100,"%")
 ```
 
-**Compared with AIPTW, TMLE showed smaller relative bias.**   
+Compared with AIPTW, TMLE showed smaller relative bias.  
 
 #TMLE using the Super-Learner 
 
-With TMLE we can call the Super-Learner (SL) R package to improve model prediction performance. The basic implementation of TMLE in the R-package **tmle** uses by default the SL libraries SL.glm (main terms logistic regression of A and W), SL.step (stepwise forward and backward model selection using AIC criterion, restricted to second order polynomials) and SL.glm.interaction, a glm variant that include second order polynomials and two by two interactions of the main terms included in the model).
+With TMLE we can call the Super-Learner (SL). The SL is a R-package using V-fold cross-validation and ensembled learning (prediction using the all the predictions of multiple stacked learning algorithms) techniques to improve model prediction performance [@breiman1996].  
 
-The principal interest of calling the Super-Learner is to obtain the less-unbiased estimated of $\bar Q_{n}^{0}(A,W)$ and $g_{0}(A,W)$. It is achieved by obtaining the smallest expected loss function for Y or A (binary outcomes), respectively. For instance, the negative logarithmic loss function for Y is computed as the minimizer of the expected squared error loss:   
+The basic implementation of TMLE in the R-package **tmle** uses by default three algorithms:    
+1. SL libraries SL.glm (main terms logistic regression of A and W),    
+2. SL.step (stepwise forward and backward model selection using AIC criterion, restricted to second order polynomials) and,  
+3. SL.glm.interaction (a glm variant that include second order polynomials and two by two interactions of the main terms included in the model).    
+
+The principal interest of calling the Super-Learner is to obtain the less-unbiased estimated for $\bar Q_{n}^{0}(A,W)$ and $g_{0}(A,W)$. It is achieved by obtaining the smallest expected loss function for Y or A (binary outcomes), respectively. For instance, the negative logarithmic loss function for Y is computed as the minimizer of the expected squared error loss:   
 $$\bar Q_{0}\,=\, \text{arg min}_{\bar Q}E_{0}L(O, \bar Q),$$   
 where $L(O, \bar Q)$ is:
 $$ (Y \,-\, \bar Q(A, W))^{2}$$
 **Note**: see appendix one for a short introduction to the Super-Learner and ensemble learning thecniques. 
 
-1. Step One: predicted estimate for $\bar Q_{n}^{0}(A,W)$
+1. **Step One**: $\bar Q_{n}^{0}(A,W)$ prediction
 
 ```{r}
 #Q0
@@ -342,7 +354,7 @@ Qbar0W <- Qinit$SL.predict[(2*n+1):(3*n)]
 PsiHat.SS <- mean(Qbar1W-Qbar0W);PsiHat.SS
 ```
 
-2. Step two: predicted estimate for $g_{0}(A,W)$**
+2. **Step two**: $g_{0}(A,W)$ prediction
 
 ```{r}
 #Step 2 g_0(A|W) with SuperLearner
@@ -357,7 +369,7 @@ HAW <- as.numeric(ObsData$A==1)/gHat1W - as.numeric(ObsData$A==0)/gHat0W;mean(HA
 H1W <-  1/gHat1W
 H0W <- -1/gHat0W
 ```
-3. Steps 3 and 4: fluctuation step and substitution estimation for for for $\bar Q_{n}^{0}(A,W)$ to $\bar Q_{n}^{1}(A,W)$  
+3. **Steps 3 and 4**: fluctuation step and substitution estimation for for for $\bar Q_{n}^{0}(A,W)$ to $\bar Q_{n}^{1}(A,W)$  
 
 ```{r}
 #Step 4: Substitution estimaiton Q* of the ATE.
@@ -400,19 +412,64 @@ cat("\n SL.TMLER.Psi_bias:", abs(True_Psi-SL.TMLER.Psi$estimates[[2]][[1]]))
 cat("\n Relative_SL.TMLER.Psi_bias:",abs(True_Psi-SL.TMLER.Psi$estimates[[2]][[1]])/True_Psi*100,"%")
 ```
 We have demonstrated:  
-1. **TMLE excels** the AIPTW estimator and,  
-2. TMLE **best performance** is obtained when calling more advanvanced **Super-Learner** algorithms.   
+
+1. **TMLE excels** the AIPTW estimator and,    
+2. TMLE **best performance** is obtained when calling more advanvanced **Super-Learner** algorithms.     
+ 
+# Appendix One
+Efron in 1982 showed that the empirical **Influence Curve** estimate of standar error is the same as the one obtained using the infinitesimal jackknife and the nonparametric deltha method [@efron1982]. 
+1. The Delat Method = First order of the Taylor series expansion: 
+$$f(x) \approx f(x)\,-\,f(\mu)\,+\,(x\,-\,\mu)f'(\mu);$$   
+where $f'(\mu)$ is the derivative of the function with respect to X evaluated at the mean of X. Therefore, squaring both terms, the variance is approximately:
+$$\text{E}[f(x)-f(\mu)]^{2}\approx \text{E}(x\,-\,\mu)^{2}\,\times\,[f'(\mu)]^{2};$$
+The left-hand sie of the above equation is approximately the variance of $f(x)$ and applied to the empirical distribution of X, the sample estimate of variance for X replaces:
+$$\text{E}(x_{i}\,-\,\mu)^{2}.$$
+The infinitesimal jackknife estimate of the standard error is defined as follows:
+$$SD_{ij}(\theta_{e})\,=\,\left(\frac{\sum_{i=1}^{n}U_{i}^{2}}{n^{2}}\right)^{1/2};$$
+where $\theta_{e}$ is the estimate of the parameter $\theta$ and $U_{i}$ is a **directional derivative** in the direction of the *i*th coordinate centered at the mean of the empirical distribution function.
+
+![](Figures/IC.png)
+**Figure 3**. Estimate of the $\psi$ Standard Error using the efficient Influence Curve.  
+**Image credit**: Miguel Angel Luque-Fernandez. 
+
+#Appendix Two
+With TMLE we can call the R-package **Super-Learner (SL)**. The *SL* uses **cross-validation** and **ensembled learning** (using all the predictions of multiple stacked learning algorithms) techniques to improve model prediction performance [@breiman1996].  
+
+The **SL** algorithm provides a system based on V-fold cross-validation [@efron1983] (10-folds) to combine adapttively multiple algorithms into an improved estimator, and returns a function we can also use for prediction in new datasets.  
+
+![](Figures/vfold.png)
+**Figure 4**: 10-fold cross-validation algorithm.  
+**Source**: Sherri Rose in Esembles in Public Health and Healt Policy. May 4, 2016.  
+
+
+The basic implementation of TMLE in the R-package **tmle** uses by default three algorithsm:
+1. SL libraries SL.glm (main terms logistic regression of A and W),  
+2. SL.step (stepwise forward and backward model selection using AIC criterion, restricted to second order polynomials) and, 3. SL.glm.interaction (a glm variant that include second order polynomials and two by two interactions of the main terms included in the model).  
+
+The principal interest of calling the Super-Learner is to obtain the less-unbiased estimated for $\bar Q_{n}^{0}(A,W)$ and $g_{0}(A,W)$. It is achieved by obtaining the smallest expected loss function for Y or A (binary outcomes), respectively. For instance, the negative logarithmic loss function for Y is computed as the minimizer of the expected squared error loss:   
+$$\bar Q_{0}\,=\, \text{arg min}_{\bar Q}E_{0}L(O, \bar Q),$$   
+where $L(O, \bar Q)$ is:
+$$ (Y \,-\, \bar Q(A, W))^{2}$$
+The **SL** algorithm first split the data into 10 blocks and fits each of the selected algoriths on the training set (non-shaded blocks), then predicts the estimated probabilities of the outcome (Y) using the validation set (shaded block) for each algorithm, based on the corresponding training set. Afterwards, the **SL** estimates the the cross-validating riks for each algorithm averaging the risks across validation sets resulting in one estimated cross-validated risk for each algorithm. Finally, the **SL** select the combination of Z that minimizes the cross-validation risk, defined as the minimum mean square error for each of the selected algorithms using Y and Z. A weighted combination of the algorithms (ensemble learning) in Z is then used to predict the outcome (Y) (see Figure 5).  
+
+![](Figures/CV.png)
+
+**Figure 5**: Flow Diagram for the Super-Learner algorithm.  
+**Source**: Mark van der Laan and Sherri Rose. Targeted learning: causal inference for observational and experimental dataSpringer Series in Statistics, 2011.    
+
+#Session Info 
+```{r session-info, results ='markup'}
+devtools::session_info()
+```
 
 #Thank you  
 Thank you for participating in this tutorial.  
 If you have updates or changes that you would like to make, please send <a href="https://github.com/migariane/MALF" target="_blank">me</a> a pull request.
-Alternatively, if you have any questions, please e-mail me.  
-**Miguel Angel Luque Fernandez**  
+Alternatively, if you have any questions, please e-mail me. 
+You can cite this repository as:      
+Luque-Fernandez MA, (2016). Targeted Maximum Likelihood Estimation a Step by Step Guided Implementation. GitHub repository, http://migariane.github.io/TMLE.nb.html.    
+**Miguel Angel Luque Fernandez**     
 **E-mail:** *miguel-angel.luque at lshtm.ac.uk*  
 **Twitter** `@WATZILEI`  
 
-# Session Info 
-```{r session-info, results ='markup'}
-devtools::session_info()
-```
 # References 
